# datafusion-functions-variant

./: Cargo.toml  README.md
.github/workflows/: check.yml  test.yml
arrow-open-variant/: Cargo.toml
arrow-open-variant/src/: array.rs  cast.rs  json.rs  lib.rs  utils.rs
open-variant/: Cargo.toml  README.md
open-variant/src/: lib.rs  metadata.rs  utils.rs
open-variant/src/values/: mod.rs  read.rs  write.rs
open-variant/src/variant/: mod.rs  read.rs  write.rs
