[package]
name = "arrow-open-variant"
version = "0.1.0"
edition = "2021"
description = "Open Variant Data Type Arrow functions"
readme = "README.md"
license = "Apache-2.0"
keywords = [""]
categories = []
repository = "https://github.com/datafusion-contrib/datafusion-functions-variant"
rust-version = "1.60"

[dependencies]
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
open-variant = { path = "../open-variant" }

# For JSON parsing
jiter = { version = "0.4", optional = true }

[features]
default = ["json"]
json = ["jiter"]
